--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,102 +1,207 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D079E6"
+    android:background="#FFFFFF"
     tools:context=".MainActivity">
 
-    <RelativeLayout
-        android:id="@+id/qview"
+    <TextView
+        android:id="@+id/text_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:fontFamily="@font/nunito_bold"
+        android:layout_margin="12dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:text="12 Aug\' 2022"
+        android:textColor="#503030"
+        />
+
+    <ImageView
+        android:id="@+id/menu_btn"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:src="@drawable/menu_data"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="12dp"
+        />
+
+    <TextView
+        android:id="@+id/quote_of_day_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#D079E6">
+        android:text="Quote of the Day!"
+        android:textSize="25dp"
+        android:textColor="#503030"
+        android:fontFamily="@font/nunito_semibold"
+        android:layout_below="@id/text_date"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="12dp"
+        />
 
-        <TextView
-            android:id="@+id/title_view"
-            android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:gravity="center"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="40dp"
-            android:text=" Quote of the Day"
-            android:textColor="#FFFFFF"
-            android:fontFamily="sans-serif-condensed-medium"
-            android:textSize="40dp"
-            android:textStyle="bold|normal"
-            />
+    <LinearLayout
+        android:id="@+id/quote_card_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/quote_of_day_title"
+        android:orientation="horizontal"
+        android:background="@drawable/rounded_corners"
+        android:elevation="12dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="12dp">
 
         <TextView
             android:id="@+id/quote_view"
-            android:layout_below="@id/title_view"
-            android:layout_width="match_parent"
+            android:layout_width="290dp"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="150dp"
-            android:gravity="center"
-            android:fontFamily="sans-serif-condensed"
-            android:padding="7dp"
-            android:text="@+id/quote_txt"
-            android:textColor="#FFFFFF"
-            android:textSize="30dp"
-            android:textStyle="bold" />
+            android:layout_gravity="center_vertical"
+            android:text="This is the actual quote. Be motivated."
+            android:textSize="22dp"
+            android:textColor="@color/purple_700"
+            android:fontFamily="@font/nunito_extrabold"
+            android:layout_margin="12dp"
+            />
 
+        <LinearLayout
+            android:id="@+id/quote_card_buttons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/quote_share_button"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/share_content"
+                android:layout_marginBottom="12dp"
+                android:onClick="share"
+                />
+            <ImageView
+                android:id="@+id/quote_copy_button"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/copy_content"
+                android:layout_marginBottom="12dp"
+                />
+            <ImageView
+                android:id="@+id/quote_save_button"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/save_unfilled"
+                />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/arrow_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/quote_card_layout"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="12dp">
+
+        <TextView
+            android:id="@+id/arrow_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="See it in"
+            android:textSize="25dp"
+            android:textColor="#503030"
+            android:fontFamily="@font/nunito_semibold"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="12dp"
+            />
+
+        <ImageView
+            android:id="@+id/curly_arrow_pointing_translator"
+            android:layout_width="50dp"
+            android:layout_height="100dp"
+            android:src="@drawable/curly_arrow"
+            android:scaleType="centerInside"
+            android:layout_alignParentEnd="true"
+            />
+
+        <LinearLayout
+            android:id="@+id/translate_languages_button"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/arrow_title"
+            android:layout_marginBottom="12dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/hindi_translate_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/rounded_corners"
+                android:text="Hindi"
+                android:textSize="22dp"
+                android:padding="10dp"
+                android:textColor="#000000"
+                android:fontFamily="@font/nunito_bold"
+                android:elevation="12dp"
+                />
+
+            <TextView
+                android:id="@+id/punjabi_translate_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/rounded_corners"
+                android:text="Punjabi"
+                android:textSize="22dp"
+                android:padding="10dp"
+                android:textColor="#000000"
+                android:fontFamily="@font/nunito_bold"
+                android:elevation="12dp"
+                />
+
+            <TextView
+                android:id="@+id/english_translate_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/rounded_corners"
+                android:text="English"
+                android:textSize="22dp"
+                android:padding="10dp"
+                android:textColor="#000000"
+                android:fontFamily="@font/nunito_bold"
+                android:elevation="12dp"
+                />
+
+        </LinearLayout>
     </RelativeLayout>
-
 
     <TextView
         android:id="@+id/refresh_btn"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_above="@+id/img_btn"
+        android:layout_below="@id/arrow_layout"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
         android:background="@drawable/rounded_corners"
         android:elevation="5dp"
         android:gravity="center"
-        android:onClick="refresh"
         android:padding="15dp"
         android:text="Refresh Quote"
         android:fontFamily="sans-serif-medium"
         android:textAllCaps="false"
         android:textSize="20dp"
         android:textColor="#000000" />
-
-    <LinearLayout
-        android:id="@+id/img_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_marginBottom="30dp"
-        android:layout_centerInParent="true"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/rounded_corners"
-        android:padding="15dp"
-        android:elevation="5dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:onClick="share"
-            android:scaleType="centerCrop"
-            android:layout_marginEnd="14dp"
-            android:text="Share On WhatsApp"
-            android:fontFamily="sans-serif-medium"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:scaleType="centerCrop"
-            android:onClick="share"
-            android:src="@drawable/whatsapp" />
-    </LinearLayout>
-
 
 </RelativeLayout>
